--- a/it/index.html
+++ b/it/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
+    <link rel="shortcut icon" href="src/images/small_logo.png" type="image/x-icon">
     <link rel="styleSheet" type="text/css"
           href="//ajax.googleapis.com/ajax/libs/dojo/1.12.1/dijit/themes/claro/claro.css">
     <link rel="stylesheet" type="text/css"
@@ -24,16 +25,16 @@
     <script src="//ajax.googleapis.com/ajax/libs/dojo/1.12.1/dojo/dojo.js"></script>
 </head>
 <body class="claro">
-    <div id="app"></div>
-    <div class="loader">
-        <div>Loading...</div>
-        <div>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+<div id="app"></div>
+<div class="loader">
+    <div>Loading...</div>
+    <div>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
-    <script src="src/js/components/contact.js"></script>
-    <script src="src/js/app.js"></script>
+</div>
+<script src="src/js/components/contact.js"></script>
+<script src="src/js/app.js"></script>
 </body>
 </html>
