add examples angular

--- a/examples/index.html
+++ b/examples/index.html
@@ -29,12 +29,19 @@
   <header>Resume / CV</header>
   <div id="chart">
     <div class="desc full-static">
-      <h2>Examples code {</h2>
+      <h2>Examples code on React {</h2>
       <div class="subscribe">
         <h3 class="place">&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://codepen.io/signal_cap/pen/weJjRG">Transform data utils</a>&nbsp;;</h3>
         <h3 class="place">&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://codepen.io/signal_cap/pen/Rgpyzb">Action example</a>&nbsp;;</h3>
         <h3 class="place">&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://codepen.io/signal_cap/pen/zzZjVL">Reducer example</a>&nbsp;;</h3>
         <h3 class="place">&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://codepen.io/signal_cap/pen/RgpJbw">React Component example</a>&nbsp;;</h3>
+      </div>
+      <h2>}</h2>
+      <h2>Examples code on Angular {</h2>
+      <div class="subscribe">
+        <h3 class="place">&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://codepen.io/signal_cap/pen/yXqvRp">app.component.ts</a>&nbsp;;</h3>
+        <h3 class="place">&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://codepen.io/signal_cap/pen/BZPYvQ">app.module.ts</a>&nbsp;;</h3>
+        <h3 class="place">&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://codepen.io/signal_cap/pen/ZyjrZR">room.message.component (ts, css, html)</a>&nbsp;;</h3>
       </div>
       <h2>}</h2>
     </div>
