--- a/xim/index.html
+++ b/xim/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>TODO List XIM Inc</title>
+    <title>TODO List</title>
 
     
     <link href="assets/css/application.css" rel="stylesheet">
