[GOALIK ] add test goalik pro styles

--- a/goalik/index.html
+++ b/goalik/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgPro</title>
+  <title>G⚽AL' ик</title>
   <base href="https://signalhub.github.io/goalik/">  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
