[GOALIK ] update header

--- a/goalik/index.html
+++ b/goalik/index.html
@@ -13,7 +13,7 @@
   <meta name="google-signin-client_id" content="894330108157-5ucbcvtekdsmn1nljlog7ft6n5ruqclu.apps.googleusercontent.com">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://vk.com/js/api/openapi.js?159" type="text/javascript"></script>
-<link rel="stylesheet" href="styles.9cab83c198b651f594b4.css"></head>
+<link rel="stylesheet" href="styles.b61a6a488367e250ec6f.css"></head>
 <body>
   <app-root>
     <div class="loader_ball">
@@ -22,8 +22,9 @@
         <div class="lines"></div>
         <div class="lines"></div>
         <div class="lines"></div>
+        <div class="ball-loader"></div>
       </div>
     </div>
   </app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.7fb637d055581aa28d51.js"></script><script type="text/javascript" src="main.91933683c6100e560b5f.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.7fb637d055581aa28d51.js"></script><script type="text/javascript" src="main.91e9038de4a83bbf3452.js"></script></body>
 </html>
